# Arbees

./: .claude-session-state.md  .dockerignore  .env.example  .gitignore  ARCHITECTURE_REVIEW.md  BUILD_OPTIMIZATION.md  CHAOS_TESTING.md  CLAUDE_CODE_FUTURES_ARCHIVAL_PROMPT.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_ISSUE_THREE_TEAM_MATCHERS.md  CRYPTO_ARBITRAGE_SYSTEM.md  CRYPTO_ARCHITECTURE_ANALYSIS.md  CRYPTO_SHARD_IMPLEMENTATION_COMPLETE.md  CRYPTO_SIGNAL_PROCESSOR_DESIGN.md  Cargo.toml  DOCKER_TROUBLESHOOTING.md  Dockerfile.rust-dev  Dockerfile.rust-optimized  ENHANCEMENT_CONTEXT_BASED_TEAM_MATCHING.md  FAULT_TOLERANCE_IMPLEMENTATION.md  KALSHI_API_DEMO_README.md  LIQUIDITY_FIX.md  MARKET_TYPES_ANALYSIS.md  MIGRATION_ARBEES.md  MULTI_MARKET_IMPLEMENTATION.md  NEXT_STEPS.md  NOTIFICATION_SERVICE_TROUBLESHOOTING.md  PHASE_5_DETAILED_PLAN.md  PLANNING_PROMPT_FUTURES_ARCHIVING.md  PLANNING_PROMPT_LIFECYCLE_AND_ML.md  PLANNING_PROMPT_NOTIFICATION_SERVICE.md  PLANNING_PROMPT_NOTIFICATION_SERVICE_RUST.md  PLANNING_PROMPT_REAL_EXECUTION.md  PLANNING_PROMPT_UNIFIED_TEAM_MATCHING.md  POLYMARKET_MONITOR_DESIGN.md  README.md  RESUME_STATE.md  RUST_MIGRATION_ASSESSMENT.md  SIGNAL_CAPTCHA_DESKTOP_APP_FIX.md  SIGNAL_CAPTCHA_MOBILE_FIX.md  (+32 more)
rust_core/: Cargo.toml  arbees_core.pyi  pyproject.toml
rust_core/src/: atomic_orderbook.rs  circuit_breaker.rs  execution.rs  league_config.rs  lib.rs  position_tracker.rs  simd.rs  team_cache.rs  types.rs  win_prob.rs
rust_core/src/alerts/: critical.rs  mod.rs
rust_core/src/clients/: binance.rs  chained_price.rs  chainlink.rs  coinbase.rs  coingecko.rs  crypto_price.rs  espn.rs  fred.rs  kalshi.rs  mod.rs  polymarket.rs  polymarket_clob.rs
rust_core/src/db/: crypto.rs  event_state.rs  health.rs  mod.rs  pool.rs  retry.rs
rust_core/src/matching/: crypto.rs  mod.rs  team.rs
rust_core/src/models/: market_type.rs  mod.rs
rust_core/src/probability/: crypto.rs  economics.rs  mod.rs  politics.rs  sport.rs
rust_core/src/providers/: crypto.rs  crypto_arbitrage.rs  economics.rs  espn.rs  mod.rs  politics.rs  registry.rs
rust_core/src/redis/: bus.rs  mod.rs  pubsub_reconnect.rs  pubsub_reconnect_old.rs
rust_core/src/utils/: matching.rs  mod.rs  money.rs
services/: Cargo.toml  __init__.py  execution_engine.py
services/Deprecated/execution_service/: __init__.py  service.py
services/Deprecated/game_shard/: Dockerfile  __init__.py  shard.py
services/Deprecated/orchestrator/: __init__.py  orchestrator.py  supervisor.py
services/Deprecated/position_tracker/: __init__.py  tracker.py
services/Deprecated/signal_processor/: Dockerfile  processor.py  rule_evaluator.py
services/analytics_service/: Dockerfile  __init__.py  main.py  scheduler.py
services/analytics_service/feedback/: __init__.py  feedback_service.py  loss_analyzer.py  pattern_detector.py  rule_generator.py
services/api/: Dockerfile  __init__.py  main.py
services/arbees_rust_core/: Cargo.toml
services/arbees_rust_core/src/: lib.rs  win_prob.rs
services/archiver/: Dockerfile  __init__.py  archiver.py  config.py
services/crypto_shard_rust/: Cargo.toml  Dockerfile
services/crypto_shard_rust/src/: config.rs  db.rs  lib.rs  main.rs  shard.rs  types.rs
services/crypto_shard_rust/tests/: integration_test.rs
services/crypto_spot_monitor/: Dockerfile  monitor.py  requirements.txt
services/crypto_zmq_bridge/: Dockerfile  bridge.py
services/execution_service/: Dockerfile  service.py
services/execution_service_rust/: Cargo.toml  Dockerfile
services/execution_service_rust/src/: audit.rs  balance.rs  config.rs  engine.rs  idempotency.rs  kill_switch.rs  lib.rs  main.rs  polymarket_executor.rs  rate_limiter.rs
services/execution_service_rust/tests/: paper_trading_test.rs
services/futures_monitor/: Dockerfile  __init__.py  config.py  monitor.py  requirements.txt
services/game_shard/: Dockerfile  shard.py
services/game_shard_rust/: Cargo.toml  Dockerfile
services/game_shard_rust/src/: config.rs  event_monitor.rs  main.rs  shard.rs  types.rs
services/kalshi_monitor/: Dockerfile  TROUBLESHOOTING.md  __init__.py  monitor.py
services/market_discovery/: __init__.py  discovery.py  parser.py  team_cache.json
services/market_discovery_rust/: Cargo.toml  Dockerfile  README.md
services/market_discovery_rust/src/: main.rs  matching.rs
services/ml_analyzer/: Dockerfile  __init__.py  analyzer.py  anomaly_detector.py  config.py  data_loader.py  delivery.py  feature_extractor.py  insights.py  report_generator.py  validation.py
services/ml_analyzer/models/: __init__.py  optimizer.py  trade_success.py
services/notification_service_rust/: Cargo.toml  Dockerfile  README.md
services/notification_service_rust/src/: config.rs  filters.rs  formatters.rs  game_context.rs  main.rs  scheduler.rs  signal_client.rs  thresholds.rs
services/orchestrator/: Dockerfile  orchestrator.py  supervisor.py
services/orchestrator_rust/: Cargo.toml  Dockerfile
services/orchestrator_rust/src/: config.rs  main.rs  state.rs
services/polymarket_monitor/: Dockerfile  __init__.py  monitor.py
services/position_manager/: Dockerfile  __init__.py  position_manager.py
services/position_tracker/: Dockerfile  tracker.py
services/position_tracker_rust/: Cargo.toml  Dockerfile
services/position_tracker_rust/src/: main.rs
services/signal_processor/: __init__.py  processor.py
services/signal_processor_rust/: Cargo.toml  Dockerfile
services/signal_processor_rust/src/: main.rs
services/zmq_listener_rust/: Cargo.toml  Dockerfile
services/zmq_listener_rust/src/: main.rs
shared/: pyproject.toml
shared/arbees_shared/: __init__.py
shared/arbees_shared/db/: __init__.py  connection.py
shared/arbees_shared/health/: __init__.py  heartbeat.py
shared/arbees_shared/messaging/: __init__.py  redis_bus.py
shared/arbees_shared/models/: __init__.py  execution.py  game.py  health.py  market.py  market_types.py  signal.py  trade.py
shared/arbees_shared/risk/: __init__.py  controller.py
shared/arbees_shared/team_matching/: __init__.py  client.py
shared/arbees_shared/utils/: __init__.py  (+3 more)
(+251 files in other folders)
