[workspace]
members = ["rust_core", "services/market_discovery_rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Arbees Team"]

[workspace.dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
thiserror = "1.0"
# New dependencies for terauss integration
rustc-hash = "2.0"           # Fast hashing for GlobalState lookups
parking_lot = "0.12"         # Faster RwLock than std
wide = "0.7"                 # SIMD support

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
