[project]
name = "arbees"
version = "0.1.0"
description = "Live sports arbitrage trading system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Arbees Team"}
]
dependencies = [
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "msgpack>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "tenacity>=8.2.0",
    "httpx>=0.26.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "maturin>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["shared", "."]

[tool.hatch.build.targets.wheel]
packages = [
    "shared/arbees_shared",
    "data_providers",
    "markets",
    "services",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["arbees_shared", "arbees_core"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]
