[package]
name = "arbees_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "High-performance arbitrage detection and win probability calculations"

[lib]
name = "arbees_core"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rayon.workspace = true
thiserror.workspace = true

[features]
default = []
