[package]
name = "arbees_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "High-performance arbitrage detection and win probability calculations"

[lib]
name = "arbees_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rayon.workspace = true
thiserror.workspace = true
# New dependencies for terauss integration
rustc-hash.workspace = true
parking_lot.workspace = true
wide = { workspace = true, optional = true }

[features]
default = ["simd"]
simd = ["wide"]
python = ["pyo3"]

