[package]
name = "arbees_rust_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "High-performance arbitrage detection and shared logic library"

[lib]
name = "arbees_rust_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }

# Async & Networking
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json", "stream"] }
futures-util = { workspace = true }
async-trait = { workspace = true }

# Data & Storage
redis = { workspace = true, features = ["tokio-comp", "json"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# High Performance & Parallelism
rayon = { workspace = true }
rustc-hash = { workspace = true }
parking_lot = { workspace = true }
wide = { workspace = true, optional = true }

# Utilities
strsim = { workspace = true }
hostname = { workspace = true }

# RSA signing for Kalshi API authentication
rsa = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# Python interop
pyo3 = { workspace = true, optional = true, features = ["extension-module"] }

[features]
default = ["simd"]
simd = ["wide"]
python = ["pyo3"]
