[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "arbees_core"
version = "0.1.0"
description = "High-performance arbitrage detection and win probability calculations"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "arbees_core"
