[workspace]
resolver = "2"
members = [
    "market_discovery_rust",
    "orchestrator_rust",
    "arbees_rust_core",
    "game_shard_rust",
    "execution_service_rust",
    "signal_processor_rust",
    "position_tracker_rust"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
anyhow = "1.0"
dotenv = "0.15"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
strsim = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.10"
hostname = "0.4"
async-trait = "0.1"
