[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbees-shared"
version = "0.1.0"
description = "Shared models and utilities for Arbees"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "msgpack>=1.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arbees_shared*"]
