[package]
name = "arbees_rust_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
strsim = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
hostname = { workspace = true }
async-trait = { workspace = true }
