[package]
name = "crypto_shard_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crypto_shard_rust"
path = "src/main.rs"

[lib]
name = "crypto_shard_rust"
path = "src/lib.rs"

[dependencies]
arbees_rust_core = { path = "../../rust_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
sqlx = { workspace = true }
redis = { workspace = true }
zeromq = { workspace = true }
rmp-serde = "1.1"

[dev-dependencies]
tokio-test = "0.4"
