[package]
name = "execution_service_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "execution_service_rust"
path = "src/lib.rs"

[[bin]]
name = "execution_service_rust"
path = "src/main.rs"

[dependencies]
arbees_rust_core = { path = "../../rust_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }