[package]
name = "game_shard_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
arbees_rust_core = { path = "../../rust_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
rmp-serde = "1.1"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { workspace = true }
zeromq = { workspace = true }