[package]
name = "market_discovery_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "json"] }
strsim = "0.10" # For fuzzy matching
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
dotenv = "0.15"
futures-util = "0.3"
chrono = "0.4"
hostname = "0.4"

[[bin]]
name = "market_discovery"
path = "src/main.rs"
