[package]
name = "market_discovery_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
arbees_rust_core = { path = "../../rust_core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
strsim = { workspace = true } # For fuzzy matching
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
hostname = { workspace = true }

[[bin]]
name = "market_discovery"
path = "src/main.rs"
