[package]
name = "orchestrator_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
arbees_rust_core = { path = "../arbees_rust_core" }
tokio = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
strsim = { workspace = true } # For team matching fallback or similarity
log = { workspace = true }
