[package]
name = "signal_processor_rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "signal_processor"
path = "src/main.rs"

[dependencies]
arbees_rust_core = { path = "../../rust_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
hostname = { workspace = true }
async-trait = { workspace = true }
zeromq = { workspace = true }
