[package]
name = "zmq_listener_rust"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zmq_listener_rust"
path = "src/main.rs"

[dependencies]
arbees_rust_core = { path = "../../rust_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
redis = { workspace = true }
zeromq = { workspace = true }
